--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mathjs": "^13.0.2",
     "three": "^0.165.0"
   },
   "devDependencies": {
